--- a/MPEG4/res/layout/main.xml
+++ b/MPEG4/res/layout/main.xml
@@ -20,9 +20,10 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
 
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/hello" />
+    <Button
+        android:id="@+id/resetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset" />
 
 </LinearLayout>
